<resources>
    <string name="app_name">AndroidBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="people">People</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="users">Users</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="n_mero">Número:</string>
    <string name="id">Id:</string>
    <string name="empty">***************</string>
    <string name="t_tulo">Título</string>
    <string name="yoda">Yoda</string>
    <string name="mammal">mammal</string>
    <string name="character">characters</string>
    <string name="flims">Flims</string>
    <string name="planets">Planets </string>
    <string name="species">Species</string>
    <string name="startships">Starships</string>
    <string name="vehicles">Vehicles</string>
    <string name="luke_skywalker">Luke Skywalker</string>
    <string name="birth_year">Birth Year</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair Color</string>
    <string name="homeworld">Homeworld</string>
    <string name="gender">Gender</string>
    <string name="mass">Mass</string>
    <string name="skin_color">Skin Color</string>
</resources>